tests/unit-fort.cpp
//
// Created by yyy on 2023/4/11.
//error
//#define DOCTEST_CONFIG_IMPLEMENT_WITH_MAIN
#include "doctest.h"
#include "add.h"
#include "iostream"
//TEST_CASE("aaa"){
//    int c = deleted();
//    std::cout<<c<<std::endl;
//}
TEST_CASE("unit-fort")
{
    std::cout<<"asdasdadsa"<<std::endl;

}
